# NeRF

./: .gitignore  README.md  main.py  pyproject.toml
NeRF/: data_processing.py  nerf.py  render.py
