[tool.poetry]
name = "nerf"
version = "0.1.0"
description = "Implementation of NeRFs from scratch"
authors = ["Meghana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
